Added salt and pepper noise to todo

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -6,3 +6,4 @@ TODO:
         - Data, paths saving.
         - Several runs data.
         - Histogram plot.
+    - Add salt and pepper noise to the images
